fix margin for text tertairy on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -101,6 +101,9 @@ body {
     padding: 1rem;
     text-decoration: none;
     color: inherit; }
+    @media only screen and (max-width: 56.25em) {
+      .text-tertiary--1 {
+        margin-right: 7.5rem; } }
     @media (pointer: fine) {
       .text-tertiary--1:hover {
         background-color: #2c3e50;
