--- a/sass/main.scss
+++ b/sass/main.scss
@@ -129,6 +129,10 @@ body {
         padding: 1rem;
         text-decoration: none;
         color: inherit;
+
+        @media only screen and (max-width: $bp-large) {
+            margin-right: 7.5rem;
+        }
         @media (pointer: fine) {
             &:hover {
                 background-color: $color-primary;
